--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bin":{
+  "bin": {
     "nls": "index.js"
   },
   "bugs": {
     "url": "https://github.com/jmlongdev/node-js-command-line-tools/issues"
   },
-  "homepage": "https://github.com/jmlongdev/node-js-command-line-tools#readme"
+  "homepage": "https://github.com/jmlongdev/node-js-command-line-tools#readme",
+  "dependencies": {
+    "chalk": "^4.1.2"
+  }
 }
